--- a/06/css/list-style-type2.css
+++ b/06/css/list-style-type2.css
@@ -36,8 +36,8 @@ ul {
 } */
 
 /* 가상요소를 찾아 공간 조절
-: 상태선택자
-:: 가상요소선택자
+:상태선택자(의사클래스)
+::가상요소선택자
 */
 ul > li::marker {
   /* padding: 0 20px 0 0; */
